Changing Text logic + Tests to be fixeb